name:                complex312
version:             0.1.0.0
description:         Example from 15-312 representing coordinates (complex numbers) two ways
homepage:            https://github.com/jez/complex312#readme
license:             MIT
license-file:        LICENSE.txt
author:              Jake Zimmerman
maintainer:          zimmerman.jake@gmail.com
copyright:           2017 Jake Zimmerman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ComplexTC
                     , ComplexADT
                     , Quadrant
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite complex312-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , complex312
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jez/complex312
